--- a/tianmayunxi02/src/main/res/layout/fragment_integral_zp02yx_bwusb.xml
+++ b/tianmayunxi02/src/main/res/layout/fragment_integral_zp02yx_bwusb.xml
@@ -205,7 +205,6 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_alignParentRight="true"
-                            android:text="+40"
                             android:textColor="@color/blue_primary"
                             android:textSize="@dimen/material_15" />
                     </RelativeLayout>
@@ -267,10 +266,10 @@
                             android:textSize="@dimen/material_15" />
 
                         <TextView
+                            android:id="@+id/tv3"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_alignParentRight="true"
-                            android:text="+100"
                             android:textColor="@color/blue_primary"
                             android:textSize="@dimen/material_15" />
                     </RelativeLayout>
@@ -300,9 +299,11 @@
                             android:paddingBottom="4dp"
                             android:text="去绑定"
                             android:textSize="@dimen/material_font_12"
+                            rv:rv_backgroundColor="@color/background04"
                             rv:rv_radiusHalfHeightEnable="true"
                             rv:rv_rippleEnable="false"
-                           />
+                            rv:rv_textColor="@color/blue_primary"
+                            />
                     </RelativeLayout>
 
                 </LinearLayout>
@@ -366,10 +367,10 @@
                             android:textSize="@dimen/material_15" />
 
                         <TextView
+                            android:id="@+id/tv4"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_alignParentRight="true"
-                            android:text="+5"
                             android:textColor="@color/blue_primary"
                             android:textSize="@dimen/material_15" />
                     </RelativeLayout>
