--- a/tianmayunxi02/src/main/res/layout/fragment_pllist_item_zp02yx_bwusb.xml
+++ b/tianmayunxi02/src/main/res/layout/fragment_pllist_item_zp02yx_bwusb.xml
@@ -55,12 +55,14 @@
         android:drawableLeft="@mipmap/icon_msg_good" />
     <ImageView
         android:id="@+id/ly"
-        android:layout_width="wrap_content"
+        android:layout_width="@dimen/material_25"
         android:layout_height="wrap_content"
-        android:background="@mipmap/icon_ly"
-        android:layout_alignParentRight="true"
+        android:gravity="center"
         android:layout_alignBottom="@+id/tv_theme"
-        />
+        android:layout_alignParentRight="true"
+        android:layout_marginBottom="@dimen/material_5"
+        android:scaleType="centerInside"
+        android:src="@mipmap/ic_more" />
     <com.aries.ui.view.radius.RadiusTextView
         android:id="@+id/btn_pl"
         android:layout_width="wrap_content"
