--- a/tianmayunxi/src/main/res/layout/fragment_pl_item_zp01yx_bwusb.xml
+++ b/tianmayunxi/src/main/res/layout/fragment_pl_item_zp01yx_bwusb.xml
@@ -49,6 +49,8 @@
         android:id="@+id/tv_up"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:scaleType="centerInside"
+        android:gravity="center"
         android:layout_alignBottom="@+id/tv_theme"
         android:layout_marginRight="@dimen/material_10"
         android:layout_toLeftOf="@+id/ly"
@@ -56,11 +58,14 @@
 
     <ImageView
         android:id="@+id/ly"
-        android:layout_width="wrap_content"
+        android:layout_width="@dimen/material_25"
         android:layout_height="wrap_content"
+        android:gravity="center"
         android:layout_alignBottom="@+id/tv_theme"
         android:layout_alignParentRight="true"
-        android:background="@mipmap/icon_ly" />
+        android:layout_marginBottom="@dimen/material_5"
+        android:scaleType="centerInside"
+        android:src="@mipmap/ic_more" />
 
     <com.aries.ui.view.radius.RadiusTextView
         android:id="@+id/btn_pl"
