--- a/tianmayunxi02/src/main/res/layout/fragment_pl_item_zp01yx_bwusb2.xml
+++ b/tianmayunxi02/src/main/res/layout/fragment_pl_item_zp01yx_bwusb2.xml
@@ -56,11 +56,14 @@
 
     <ImageView
         android:id="@+id/ly"
-        android:layout_width="wrap_content"
+        android:layout_width="@dimen/material_25"
         android:layout_height="wrap_content"
+        android:gravity="center"
         android:layout_alignBottom="@+id/tv_theme"
         android:layout_alignParentRight="true"
-        android:background="@mipmap/icon_ly" />
+        android:layout_marginBottom="@dimen/material_5"
+        android:scaleType="centerInside"
+        android:src="@mipmap/ic_more" />
 
     <com.aries.ui.view.radius.RadiusTextView
         android:id="@+id/btn_pl"
