--- a/tianmayunxi02/src/main/res/layout/fragment_plall_item_zp01yx_bwusb2.xml
+++ b/tianmayunxi02/src/main/res/layout/fragment_plall_item_zp01yx_bwusb2.xml
@@ -54,12 +54,14 @@
         android:drawableLeft="@mipmap/icon_msg_good" />
     <ImageView
         android:id="@+id/ly"
-        android:layout_width="wrap_content"
+        android:layout_width="@dimen/material_25"
         android:layout_height="wrap_content"
-        android:background="@mipmap/icon_ly"
-        android:layout_alignParentRight="true"
+        android:gravity="center"
         android:layout_alignBottom="@+id/tv_theme"
-        />
+        android:layout_alignParentRight="true"
+        android:layout_marginBottom="@dimen/material_5"
+        android:scaleType="centerInside"
+        android:src="@mipmap/ic_more" />
     <LinearLayout
         android:id="@+id/re_pop"
         android:layout_width="0dp"
