--- a/tianmayunxi/src/main/res/layout/fragment_checkimage_zp01yx_bwusb.xml
+++ b/tianmayunxi/src/main/res/layout/fragment_checkimage_zp01yx_bwusb.xml
@@ -41,6 +41,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
+                android:maxWidth="@dimen/material_200"
+                android:lines="1"
+                android:ellipsize="end"
                 android:textColor="@color/white"
                 />
             <TextView
