--- a/tianmayunxi/src/main/res/layout/fragment_tidetail_zp01yx_bwusb.xml
+++ b/tianmayunxi/src/main/res/layout/fragment_tidetail_zp01yx_bwusb.xml
@@ -40,6 +40,10 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
+                android:lines="1"
+                android:singleLine="true"
+                android:ellipsize="end"
+                android:maxWidth="@dimen/material_200"
                 android:textColor="@color/white"
                 />
             <TextView
