--- a/tianmayunxi/src/main/res/layout/layout_tiezi_item_zp01yx_bwusb.xml
+++ b/tianmayunxi/src/main/res/layout/layout_tiezi_item_zp01yx_bwusb.xml
@@ -19,6 +19,9 @@
             android:id="@+id/tv_theme"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:maxWidth="@dimen/material_200"
+            android:lines="1"
+            android:ellipsize="end"
             android:layout_toRightOf="@+id/iv_head"
             android:layout_marginLeft="@dimen/dp_10"
             android:textSize="@dimen/material_font_13"
@@ -50,10 +53,17 @@
         android:textSize="@dimen/material_font_13"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/mlist"
+    <RelativeLayout
+        android:id="@+id/re_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content">
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/mlist"
+            android:layout_width="wrap_content"
+            android:clickable="true"
+            android:layout_height="wrap_content"/>
+    </RelativeLayout>
+
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
