--- a/tianmayunxi02/src/main/res/layout/fragment_checkimage_zp02yx_bwusb.xml
+++ b/tianmayunxi02/src/main/res/layout/fragment_checkimage_zp02yx_bwusb.xml
@@ -40,6 +40,9 @@
                 android:id="@+id/tv_title"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:maxWidth="@dimen/material_200"
+                android:lines="1"
+                android:ellipsize="end"
                 android:layout_centerInParent="true"
                 android:textColor="@color/white"
                 />
