--- a/tianmayunxi02/src/main/res/layout/fragment_tidetail_zp01yx_bwusb2.xml
+++ b/tianmayunxi02/src/main/res/layout/fragment_tidetail_zp01yx_bwusb2.xml
@@ -38,6 +38,10 @@
             <TextView
                 android:id="@+id/tv_centertitle"
                 android:layout_width="wrap_content"
+                android:maxWidth="@dimen/material_200"
+                android:lines="1"
+                android:singleLine="true"
+                android:ellipsize="end"
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
                 android:textColor="@color/white"
