--- a/tianmayunxi02/src/main/res/layout/fragment_tidetail_zp01yx_bwusb2.xml
+++ b/tianmayunxi02/src/main/res/layout/fragment_tidetail_zp01yx_bwusb2.xml
@@ -51,7 +51,6 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="订阅"
-                android:visibility="gone"
                 android:drawablePadding="@dimen/material_5"
                 android:drawableLeft="@mipmap/icon_dy"
                 android:layout_centerVertical="true"
@@ -101,6 +100,10 @@
                         android:id="@+id/tv_nickname"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_toLeftOf="@+id/tv_time"
+                        android:layout_marginRight="@dimen/material_10"
+                        android:maxLines="1"
+                        android:ellipsize="end"
                         android:layout_toRightOf="@+id/iv_head"
                         android:layout_marginLeft="@dimen/dp_10"
                         android:textSize="@dimen/material_font_13"
@@ -110,6 +113,10 @@
                         android:id="@+id/tv_content"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:layout_toLeftOf="@+id/tv_time"
+                        android:layout_marginRight="@dimen/material_20"
+                        android:maxLines="1"
+                        android:ellipsize="end"
                         android:layout_below="@+id/tv_nickname"
                         android:layout_marginLeft="@dimen/dp_10"
                         android:layout_marginTop="@dimen/material_5"
