--- a/tmhxdl/src/main/res/layout/hxdl_fragment_content_item.xml
+++ b/tmhxdl/src/main/res/layout/hxdl_fragment_content_item.xml
@@ -6,5 +6,6 @@
 <com.facebook.drawee.view.SimpleDraweeView
     android:id="@+id/iv"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" />
+    android:layout_height="match_parent"
+    android:scaleType="centerInside"/>
 </LinearLayout>
