--- a/tmhxdl/src/main/res/layout/hxdl_layout_child2.xml
+++ b/tmhxdl/src/main/res/layout/hxdl_layout_child2.xml
@@ -45,6 +45,6 @@
         android:layout_height="match_parent"
         android:layout_marginLeft="@dimen/material_10"
         android:layout_marginRight="@dimen/material_10"
-        android:scaleType="fitXY"
+        android:scaleType="centerInside"
         />
 </LinearLayout>
