--- a/tianmayunxi/src/main/res/layout/fragment_dynamic_item_zp01yx_bwusb.xml
+++ b/tianmayunxi/src/main/res/layout/fragment_dynamic_item_zp01yx_bwusb.xml
@@ -22,6 +22,10 @@
             android:layout_toRightOf="@+id/iv_head"
             android:layout_marginLeft="@dimen/dp_10"
             android:textSize="@dimen/material_font_13"
+            android:layout_toLeftOf="@+id/tv_time"
+            android:layout_marginRight="@dimen/material_10"
+            android:lines="1"
+            android:ellipsize="end"
             android:textColor="@color/blue_primary"
             android:text="#主题名称#"
             />
@@ -32,6 +36,10 @@
             android:layout_below="@+id/tv_theme"
             android:layout_marginLeft="@dimen/dp_10"
             android:layout_marginTop="@dimen/material_5"
+            android:layout_toLeftOf="@+id/tv_time"
+            android:layout_marginRight="@dimen/material_10"
+            android:lines="1"
+            android:ellipsize="end"
             android:layout_toRightOf="@+id/iv_head"
             android:textColor="@color/textcolor02"
             android:text="标题..."
