--- a/tianmayunxi02/src/main/res/layout/layout_child_zp01yx_bwusb2.xml
+++ b/tianmayunxi02/src/main/res/layout/layout_child_zp01yx_bwusb2.xml
@@ -27,14 +27,14 @@
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="@dimen/material_250"
     android:gravity="center"
     android:orientation="vertical">
 
-    <com.facebook.drawee.view.SimpleDraweeView
+    <ImageView
         android:id="@+id/pager_textview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:scaleType="fitXY"
+        android:scaleType="centerInside"
         />
 </LinearLayout>
