--- a/tianmayunxi/src/main/res/layout/fragment_commoniv_item_zp01yx_bwusb.xml
+++ b/tianmayunxi/src/main/res/layout/fragment_commoniv_item_zp01yx_bwusb.xml
@@ -12,7 +12,9 @@
         fresco:roundedCornerRadius="@dimen/material_3"/>
     <TextView
         android:id="@+id/tv_title"
-        android:layout_width="wrap_content"
+        android:layout_width="@dimen/material_110"
+        android:lines="1"
+        android:ellipsize="end"
         android:layout_height="wrap_content"
         android:layout_alignBottom="@+id/iv"
         android:paddingLeft="@dimen/material_10"
