--- a/tianmayunxi/src/main/res/layout/layout_child_zp01yx_bwusb.xml
+++ b/tianmayunxi/src/main/res/layout/layout_child_zp01yx_bwusb.xml
@@ -27,14 +27,13 @@
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/material_250"
+    android:layout_height="wrap_content"
     android:gravity="center"
     android:orientation="vertical">
 
-    <ImageView
+    <com.facebook.drawee.view.SimpleDraweeView
         android:id="@+id/pager_textview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:scaleType="centerInside"
+        android:layout_height="wrap_content"
         />
 </LinearLayout>
