--- a/tmhxdl/src/main/res/layout/hxdl_fragment_dy_item.xml
+++ b/tmhxdl/src/main/res/layout/hxdl_fragment_dy_item.xml
@@ -1,18 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:id="@+id/re_back"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
     <RelativeLayout
+        android:id="@+id/re_back"
+
         android:layout_width="wrap_content"
         android:layout_gravity="center_horizontal"
         android:padding="@dimen/dp_10"
         android:layout_height="wrap_content">
         <ImageView
             android:id="@+id/iv"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="@dimen/material_140"
+            android:layout_height="180dp"
+            android:scaleType="fitXY"
             />
     </RelativeLayout>
     <TextView
