--- a/tmhxdl/src/main/res/values/colors.xml
+++ b/tmhxdl/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
     <color name="hxdl_background01">#FED403</color>
     <color name="hxdl_background02">#010101</color>
     <color name="hxdl_background03">#E6E6E6</color>
+    <color name="hxdl_background04">#00E6E6E6</color>
 
     <color name="zp01hxdl_vjflt_textcolor01">#333333</color>
     <color name="zp01hxdl_vjflt_textcolor02">#999999</color>
