--- a/tmhxdl/src/main/res/layout/hxdl_layout_item.xml
+++ b/tmhxdl/src/main/res/layout/hxdl_layout_item.xml
@@ -3,9 +3,17 @@
     android:orientation="vertical" android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_centerInParent="true">
-    <ImageView
-        android:id="@+id/img"
-        android:layout_width="@dimen/material_200"
-        android:layout_height="@dimen/material_200"
-        android:scaleType="centerCrop"/>
+    <RelativeLayout
+        android:id="@+id/re_back"
+        android:layout_width="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:padding="@dimen/dp_10"
+        android:layout_height="wrap_content">
+        <ImageView
+            android:id="@+id/img"
+            android:layout_width="@dimen/material_120"
+            android:layout_height="180dp"
+            android:scaleType="centerCrop"/>
+    </RelativeLayout>
+
 </android.support.v7.widget.CardView>
