--- a/tianmayunxi02/src/main/res/layout/layout_child_zp01yx_bwusb2.xml
+++ b/tianmayunxi02/src/main/res/layout/layout_child_zp01yx_bwusb2.xml
@@ -27,13 +27,13 @@
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:gravity="center"
     android:orientation="vertical">
 
     <com.facebook.drawee.view.SimpleDraweeView
         android:id="@+id/pager_textview"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         />
 </LinearLayout>
