--- a/tianmayunxi/src/main/res/layout/fragment_checkimage_zp01yx_bwusb.xml
+++ b/tianmayunxi/src/main/res/layout/fragment_checkimage_zp01yx_bwusb.xml
@@ -67,8 +67,7 @@
                 android:layout_centerVertical="true"
                 android:layout_toLeftOf="@+id/iv_more"
                 android:layout_marginRight="@dimen/material_5"
-                android:visibility="gone"
-                android:layout_alignParentRight="true"
+                android:visibility="visible"
                 android:textColor="@color/textcolor09"
                 android:textSize="@dimen/material_font_13"
                 />
@@ -77,7 +76,7 @@
                 android:layout_width="@dimen/material_25"
                 android:layout_height="@dimen/material_25"
                 android:scaleType="centerInside"
-                android:visibility="gone"
+                android:visibility="visible"
                 android:src="@mipmap/icon_nav_more"
                 android:layout_centerVertical="true"
                 android:layout_alignParentRight="true"
@@ -99,6 +98,7 @@
             android:text="1/1"
             />
         <TextView
+            android:id="@+id/iv_content"
             android:layout_width="match_parent"
             android:layout_toRightOf="@+id/tv_indicator"
             android:textColor="@color/white"
