--- a/tianmayunxi02/src/main/res/layout/fragment_checkimage_zp02yx_bwusb.xml
+++ b/tianmayunxi02/src/main/res/layout/fragment_checkimage_zp02yx_bwusb.xml
@@ -97,6 +97,7 @@
             android:text="1/1"
             />
         <TextView
+            android:id="@+id/tv_content"
             android:layout_width="match_parent"
             android:layout_toRightOf="@+id/tv_indicator"
             android:textColor="@color/white"
