--- a/tianmayunxi/src/main/res/layout/fragment_checkimage_zp01yx_bwusb.xml
+++ b/tianmayunxi/src/main/res/layout/fragment_checkimage_zp01yx_bwusb.xml
@@ -30,13 +30,19 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="@dimen/material_10"
+            android:paddingTop="@dimen/material_10"
+            android:paddingBottom="@dimen/material_10"
             >
             <ImageView
                 android:id="@+id/iv_back"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@mipmap/icon_nav_back"
+                android:paddingTop="@dimen/material_5"
+                android:paddingRight="@dimen/material_15"
+                android:paddingLeft="@dimen/material_10"
+                android:paddingBottom="@dimen/material_5"
+                android:src="@mipmap/icon_nav_back"
+                android:scaleType="centerInside"
                 android:layout_centerVertical="true"
                 />
             <com.facebook.drawee.view.SimpleDraweeView
