--- a/tianmayunxi/src/main/res/layout/fragment_mysub_item_zp01yx_bwusb.xml
+++ b/tianmayunxi/src/main/res/layout/fragment_mysub_item_zp01yx_bwusb.xml
@@ -92,14 +92,18 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="@dimen/dp_10">
+        >
         <TextView
             android:id="@+id/tv_up"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:drawablePadding="@dimen/material_5"
+            android:paddingTop="@dimen/material_10"
+            android:paddingBottom="@dimen/material_10"
             android:drawableLeft="@mipmap/icon_good"
             android:textSize="@dimen/material_font_13"
+            android:paddingLeft="@dimen/material_10"
+            android:paddingRight="@dimen/material_30"
             android:textColor="@color/textcolor01"
             android:text="(0)"
             />
@@ -108,6 +112,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:drawablePadding="@dimen/material_5"
+            android:paddingTop="@dimen/material_10"
+            android:paddingBottom="@dimen/material_10"
             android:drawableLeft="@mipmap/icon_pl"
             android:textSize="@dimen/material_font_13"
             android:layout_centerHorizontal="true"
@@ -119,6 +125,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:drawablePadding="@dimen/material_5"
+            android:paddingTop="@dimen/material_10"
+            android:paddingBottom="@dimen/material_10"
+            android:paddingRight="@dimen/material_10"
             android:drawableLeft="@mipmap/icon_share"
             android:textSize="@dimen/material_font_13"
             android:textColor="@color/textcolor01"
