--- a/tianmayunxi/src/main/res/layout/fragment_tidetail_zp01yx_bwusb.xml
+++ b/tianmayunxi/src/main/res/layout/fragment_tidetail_zp01yx_bwusb.xml
@@ -18,13 +18,19 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="@dimen/material_10"
+            android:paddingTop="@dimen/material_10"
+            android:paddingBottom="@dimen/material_10"
            >
             <ImageView
                 android:id="@+id/iv_back"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:background="@mipmap/icon_nav_back"
+                android:paddingTop="@dimen/material_5"
+                android:paddingRight="@dimen/material_15"
+                android:paddingLeft="@dimen/material_10"
+                android:paddingBottom="@dimen/material_5"
+                android:src="@mipmap/icon_nav_back"
+                android:scaleType="centerInside"
                 android:layout_centerVertical="true"
                 />
             <com.facebook.drawee.view.SimpleDraweeView
@@ -115,8 +121,6 @@
                         android:layout_height="wrap_content"
                         android:layout_toLeftOf="@+id/tv_time"
                         android:layout_marginRight="@dimen/material_10"
-                        android:maxLines="1"
-                        android:ellipsize="end"
                         android:layout_below="@+id/tv_nickname"
                         android:layout_marginLeft="@dimen/dp_10"
                         android:layout_marginTop="@dimen/material_5"
@@ -140,6 +144,7 @@
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:visibility="gone"
                     android:padding="@dimen/dp_10">
                     <com.facebook.drawee.view.SimpleDraweeView
                         android:id="@+id/user_head"
