--- a/tianmayunxi02/src/main/res/layout/fragment_themedetail_item_zp01yx_bwusb2.xml
+++ b/tianmayunxi02/src/main/res/layout/fragment_themedetail_item_zp01yx_bwusb2.xml
@@ -14,17 +14,20 @@
             android:layout_width="@dimen/material_50"
             android:layout_height="@dimen/material_50"
             fresco:roundAsCircle="true"
+            android:visibility="gone"
             />
         <TextView
             android:id="@+id/tv_theme"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_toRightOf="@+id/iv_head"
+            android:layout_alignParentLeft="true"
             android:layout_marginLeft="@dimen/dp_10"
             android:textSize="@dimen/material_font_13"
             android:layout_toLeftOf="@+id/tv_time"
             android:layout_marginRight="@dimen/material_10"
             android:lines="1"
+            android:visibility="gone"
             android:textColor="@color/blue_primary"
             android:text="#主题名称#"
             />
@@ -33,7 +36,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/tv_theme"
-            android:layout_marginLeft="@dimen/dp_10"
+            android:layout_alignParentLeft="true"
             android:layout_marginTop="@dimen/material_5"
             android:layout_toLeftOf="@+id/tv_time"
             android:layout_marginRight="@dimen/material_10"
@@ -47,6 +50,7 @@
             android:text="4小时"
             android:layout_alignParentRight="true"
             android:textSize="@dimen/material_font_12"
+            android:visibility="gone"
             android:layout_width="wrap_content"
             android:textColor="@color/textcolor01"
             android:layout_height="wrap_content"
@@ -91,14 +95,18 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="@dimen/dp_10">
+        >
         <TextView
             android:id="@+id/tv_up"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:drawablePadding="@dimen/material_5"
+            android:paddingTop="@dimen/material_10"
+            android:paddingBottom="@dimen/material_10"
             android:drawableLeft="@mipmap/icon_good"
             android:textSize="@dimen/material_font_13"
+            android:paddingLeft="@dimen/material_10"
+            android:paddingRight="@dimen/material_30"
             android:textColor="@color/textcolor01"
             android:text="(0)"
             />
@@ -107,6 +115,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:drawablePadding="@dimen/material_5"
+            android:paddingTop="@dimen/material_10"
+            android:paddingBottom="@dimen/material_10"
             android:drawableLeft="@mipmap/icon_pl"
             android:textSize="@dimen/material_font_13"
             android:layout_centerHorizontal="true"
@@ -118,6 +128,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:drawablePadding="@dimen/material_5"
+            android:paddingTop="@dimen/material_10"
+            android:paddingBottom="@dimen/material_10"
+            android:paddingRight="@dimen/material_10"
             android:drawableLeft="@mipmap/icon_share"
             android:textSize="@dimen/material_font_13"
             android:textColor="@color/textcolor01"
