--- a/tmhxdl/src/main/res/layout/custom_info_hxdl_bwusb.xml
+++ b/tmhxdl/src/main/res/layout/custom_info_hxdl_bwusb.xml
@@ -5,22 +5,14 @@
     xmlns:rv="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <com.aries.ui.view.radius.RadiusLinearLayout
+    <com.aries.ui.view.radius.RadiusRelativeLayout
         android:layout_width="272dp"
-        android:layout_height="153dp"
+        android:layout_height="123dp"
         android:background="@color/white"
         android:orientation="vertical"
         rv:rv_radius="5dp"
         android:layout_centerInParent="true">
-        <TextView
-            android:layout_width="wrap_content"
-            android:textColor="@color/blue_primary"
-            android:layout_height="wrap_content"
-            android:drawableLeft="@mipmap/icon_notice"
-            android:drawablePadding="@dimen/material_5"
-            android:layout_marginTop="@dimen/material_20"
-            android:layout_gravity="center_horizontal"
-            />
+
 
         <TextView
             android:layout_width="match_parent"
@@ -28,16 +20,18 @@
             android:textSize="@dimen/material_font_12"
             android:background="@color/white"
             android:gravity="center"
-            android:layout_marginTop="@dimen/material_20"
-            android:text="确认消耗积分兑换此商品吗？"/>
+            android:layout_marginTop="30dp"
+            android:text="需要登录后才可购买，是否登录？"/>
         <View
             android:layout_width="match_parent"
             android:layout_height="@dimen/material_1"
-            android:layout_marginTop="@dimen/material_25"
+            android:layout_above="@+id/ll_bottom"
             android:background="@color/line01"/>
         <LinearLayout
+            android:id="@+id/ll_bottom"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_alignParentBottom="true"
+            android:layout_height="@dimen/material_50">
             <TextView
                 android:id="@+id/tv_cancel"
                 android:layout_width="0dp"
@@ -54,9 +48,9 @@
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:text="确认"
-                android:textColor="@color/blue_primary"
+                android:textColor="@color/black"
                 android:gravity="center"
                 android:layout_height="match_parent" />
         </LinearLayout>
-    </com.aries.ui.view.radius.RadiusLinearLayout>
+    </com.aries.ui.view.radius.RadiusRelativeLayout>
 </RelativeLayout>
