--- a/tmhxdl/src/main/res/layout/hxdl_fragment_dzs_item.xml
+++ b/tmhxdl/src/main/res/layout/hxdl_fragment_dzs_item.xml
@@ -26,11 +26,11 @@
         android:layout_marginTop="@dimen/dp_10"
         />
     <TextView
+        android:id="@+id/tv_number"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:text="2018-11-13"
-        android:visibility="gone"
         android:textSize="@dimen/material_font_12"
         android:textColor="@color/zp01hxdl_vjflt_textcolor02"
         android:layout_marginTop="@dimen/material_5"
