--- a/tmhxdl/src/main/res/values/colors.xml
+++ b/tmhxdl/src/main/res/values/colors.xml
@@ -3,12 +3,13 @@
     <color name="hxdl_background01">#FED403</color>
     <color name="hxdl_background02">#010101</color>
     <color name="hxdl_background03">#E6E6E6</color>
-    <color name="hxdl_background04">#00E6E6E6</color>
+    <color name="hxdl_background04">#00000000</color>
 
     <color name="zp01hxdl_vjflt_textcolor01">#333333</color>
     <color name="zp01hxdl_vjflt_textcolor02">#999999</color>
     <color name="zp01hxdl_vjflt_textcolor03">#5C4F0F</color>
     <color name="zp01hxdl_vjflt_textcolor04">#FF4242</color>
     <color name="zp01hxdl_vjflt_zp01hxdl_vjflttextcolor05">#362E09</color>
+    <color name="line01">#EEEEEE</color>
 
 </resources>
