--- a/tmhxdl/src/main/res/layout/custom_info_hxdl_bwusb.xml
+++ b/tmhxdl/src/main/res/layout/custom_info_hxdl_bwusb.xml
@@ -20,6 +20,7 @@
             android:textSize="@dimen/material_font_12"
             android:background="@color/white"
             android:gravity="center"
+            android:textColor="@color/black"
             android:layout_marginTop="30dp"
             android:text="需要登录后才可购买，是否登录？"/>
         <View
