--- a/tianmayunxi/src/main/res/layout/fragment_empty_zp01yx_view.xml
+++ b/tianmayunxi/src/main/res/layout/fragment_empty_zp01yx_view.xml
@@ -11,4 +11,13 @@
         android:layout_centerHorizontal="true"
         android:layout_gravity="center_horizontal"
         android:background="@mipmap/icon_soft_zp01yx"/>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/iv_soft"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="@dimen/material_5"
+        android:layout_gravity="center_horizontal"
+        android:text="暂无评论，去抢沙发！"
+        />
 </RelativeLayout>
