--- a/tianmayunxi02/src/main/res/layout/fragment_addtheme_zp02yx_bwusb.xml
+++ b/tianmayunxi02/src/main/res/layout/fragment_addtheme_zp02yx_bwusb.xml
@@ -90,6 +90,7 @@
             android:layout_height="wrap_content"
             android:lines="1"
             android:singleLine="true"
+            android:maxLength="30"
             android:background="@color/white"
             android:padding="@dimen/material_10"
             android:textSize="@dimen/material_font_12"
