--- a/tmhxdl/src/main/res/layout/hxdl_layout_item.xml
+++ b/tmhxdl/src/main/res/layout/hxdl_layout_item.xml
@@ -1,20 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_width="@dimen/material_120"
+    android:layout_height="180dp"
     android:background="@color/hxdl_background04"
     android:layout_centerInParent="true">
     <RelativeLayout
         android:id="@+id/re_back"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_gravity="center_horizontal"
-        android:padding="@dimen/dp_10"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent">
         <ImageView
             android:id="@+id/img"
-            android:layout_width="@dimen/material_120"
-            android:layout_height="180dp"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:scaleType="centerCrop"/>
     </RelativeLayout>
 
